# lexicon-docx

./: .gitignore  .gitmodules  CLAUDE.md  Cargo.toml  LICENSE  README.md  SIGNATURES.md  example.md  spec.md  style.example.toml
.github/workflows/: ci.yml  release.yml
examples/: ast_dump.rs  test_numbering.rs
lexicon/: Cargo.toml  style.example.toml
lexicon-docx/: Cargo.toml  README.md  SIGNATURES.md  signatures.toml  style.example.toml
lexicon-docx/examples/: ast_dump.rs
lexicon-docx/man/: lexicon-docx-validate.1  lexicon-docx.1
lexicon-docx/planning/: configurable-cover-page.md  cover-page-toc-toggles.md  exhibit-file-import.md  footer-and-schedule-config.md  implementation-status.md  native-word-numbering.md  signature-pages.md  todo.md
lexicon-docx/src/: error.rs  lib.rs  main.rs  model.rs  resolve.rs  signatures.rs  style.rs
lexicon-docx/tests/: integration.rs
lexicon/examples/: test_numbering.rs
lexicon/planning/: configurable-cover-page.md  cover-page-toc-toggles.md  draft-watermark.md  implementation-status.md  library-extraction.md  native-word-numbering.md
lexicon/src/: frontmatter.rs  lib.rs  main.rs  model.rs  style.rs
lexicon/src/parser/: anchors.rs  clause.rs  mod.rs
lexicon/src/render/: docx.rs  mod.rs  watermark.rs
man/: lexicon-docx-build.1  lexicon-docx-man.1
planning/: exhibit-file-import.md  implementation-status.md  todo.md
planning/completed/: binary-frolicking-music.md  jazzy-dazzling-donut.md  (+3 more)
src/: frontmatter.rs  lib.rs  main.rs  model.rs  resolve.rs  signatures.rs  style.rs
tests/: integration.rs
(+25 files in other folders)
