[package]
name = "lexicon-docx"
version = "0.1.0"
edition = "2024"
description = "Lexicon Markdown to DOCX processor for legal contracts"
license = "MIT"
repository = "https://github.com/RichEsq/lexicon-docx"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_mangen = "0.2"
comrak = "0.36"
docx-rs = "0.4"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
toml = "0.8"
regex = "1"
chrono = "0.4"
thiserror = "2"
zip = "2"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
hayro = "0.5"
